# apartment-for-rent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  run_app_and_test.sh
notebook/: experiment_1.ipynb  exploration.ipynb
notebooks/: 3_experiment_state.ipynb  4_feature_importance.ipynb  experiment.ipynb
src/: main.py
src/config/: configuration.py
src/model/: preprocessor.py
src/utils/: dataloader.py
