[tool.poetry]
name = "apartment-for-rent"
version = "0.1.0"
description = ""
authors = ["Siqi Li <lisiqi9347@gmail.com>"]
readme = "README.md"
packages = [{include = "apartment_for_rent"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ucimlrepo = "^0.0.7"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
xgboost = "^2.1.0"
seaborn = "^0.13.2"
mlflow = "^2.14.1"
shap = "^0.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
